This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Nov-2002 (Lars Duening)  (3.3.299)
  - (swap.c) Swapping strings during a GC could crash the driver.

13-Nov-2002 (Lars Duening)  (3.3.298)
  - (sprintf.c) Corrected an off-by-one error which sometimes clobbered
      the result of sprintf().
  - (efuns.c) get_type_info(,2) on an unbound-lambda crashed the driver
      because an uninitialized variable was used (thanks, Ctx!)
  - (simulate.c) If the H_NOECHO hook is set, the telnet negotiations
      are redirected only after the hook setting is verified (thanks,
      Fiona!)
  - (comm.c) Corrected a potential problem when an interactive object
      with pending data is forcefully made non-interactive: from my
      reading of the code it seems that the object remained in the
      list of players-to-flush, even though it no longer had a valid
      interactive_t attribute.

13-Nov-2002 (Lars Duening)  (3.3.297)
  - (backend.c) Reset and swapped objects are data-cleaned only
      every time_to_clean_up seconds (or 3600 seconds if no cleanup
      time is set); active objects are data-cleaned every time
      the processing gets to them.
  - (swap.c) When swapping strings, the length is now explicitely stored
      in the swap file. The old format added a \0 character as terminator,
      and consequently malfunctioned or crashed on strings using \0 as
      data character.
  - (backend.c, sprintf.c) The efuns debug_message(), sprintf() and printf()
      can now handle strings with \0 characters better.
  - (config.h) Moved the NEW_CLEANUP define into the config.h file and made
      it active again; but it still has to be modified by hand if so
      desired.

13-Nov-2002 (Lars Duening)  (3.3.296)
  - (gcollect.c) The cleanup code did not check for the NO_BLUEPRINT
      define (reported by Bardioc).
  - (gcollect.c, main.c) The new cleanup code seems to interfere with