@@ -23,12 +23,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 299)
-(Parent-Version lpmud 3-3 298)
-(Version-Log "Swapping strings during a GC could crash the driver.")
+(Project-Version lpmud 3-3 300)
+(Parent-Version lpmud 3-3 299)
+(Version-Log "He, the data cleanup code was permanently disabled by typo.")
 (New-Version-Log
 "")
-(Checkin-Time "Thu, 14 Nov 2002 16:04:53 -0700")
+(Checkin-Time "Fri, 15 Nov 2002 15:32:29 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -64,7 +64,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.49 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.362 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.363 644))
   (HISTORY (lpmud/f/49_HISTORY 1.284 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.18 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -130,7 +130,7 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.22 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.11 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.35 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.36 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.29 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.20 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -144,7 +144,7 @@
   (src/files.c (lpmud/i/50_files.c 1.17 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.11 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.77 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.78 644))
   (src/hash.h (lpmud/f/32_hash.h 1.5 644))
   (src/hash.c (lpmud/c/28_hash.c 1.15 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
@@ -239,7 +239,7 @@
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.23 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
-  (src/swap.c (lpmud/25_swap.c 1.36.1.38 644))
+  (src/swap.c (lpmud/25_swap.c 1.36.1.39 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
   (src/sysmalloc.c (lpmud/23_sysmalloc. 1.1 644))
   (src/telnet.h (lpmud/22_telnet.h 1.5.1.2 644))
